src/pages/favorite-media/user-favorites.module.scss
@use "../../styles/General.scss";

.user_favorites {
  display: grid;
  grid-template-rows: auto 1fr;

  & .header {
    justify-content: space-between;
    flex-wrap: wrap-reverse;
    position: sticky;
    top: 0px;

    & .input_search {
      flex-grow: 0.5;
    }

    @media (max-width: 480px) {
      justify-content: center;
    }
  }

  & .favorites_media {
    --gap-masonry: 1.5rem;
    --details-color: color-mix(in srgb, transparent, var(--black-chocolate) 10%);
    @extend %lateral-paddings;
    padding-block: 32px;
    max-width: var(--maximum-width);
    margin-inline: auto;
    width: 100%;
    box-sizing: border-box;
    column-width: 15rem;
    column-count: auto;
    gap: var(--gap-masonry);

    & .card {
      --padding: 16px;
      border: 1px solid var(--details-color);
      word-break: break-word;
      display: grid;
      padding: var(--padding);
      gap: 6px;
      border-radius: var(--border-radius-x1);
      width: fit-content;
      height: fit-content;
      break-inside: avoid;
      max-width: 20rem;

      &:not(:first-child) {
        margin-top: var(--gap-masonry);
      }

      &>.media_image {
        border-radius: var(--border-radius-x1);
        display: block;
        margin-bottom: 1rem;
        width: 100%;
        object-fit: cover;
      }

      & .title_group {
        width: 100%;

        &>div {
          display: flex;
          justify-content: space-between;
          align-items: center;
          gap: 1rem;

          & .media_title {
            margin: 0;
            font-size: x-large;
            font-weight: bold;
            -webkit-text-stroke: 1px currentColor;
          }
        }

        & .type {
          color: var(--cerise);
          font-weight: normal;
          font-size: large;
          margin: 0px;
        }
      }

      & .known {
        text-align: center;
        text-transform: lowercase;

        &::first-letter {
          text-transform: uppercase;
        }
      }

      & .overview {
        text-wrap: pretty;
        margin-top: 0.5rem;
      }

      & .popularity,
      & .vote_average,
      & .vote_count {
        display: flex;
        align-items: center;
        gap: 6px;
        background-color: var(--details-color);
        border-radius: var(--border-radius-x2);
        padding: var(--padding-x1);
        padding-block: 4px;
        width: fit-content;
        flex-wrap: wrap;
        justify-content: center;

        &>svg {
          width: 1rem;
          height: 1rem;
        }

        &>span {
          text-wrap: nowrap;
        }
      }

      & .statistics {
        align-self: start;
        display: flex;
        gap: 6px;
        margin: 0px;
        padding: 0px;
        list-style: none;

        & .vote_average {
          >svg {
            color: yellow;
          }
        }

        & .vote_count {
          &>svg {
            color: red;
          }
        }
      }
    }
  }
}

